# rnv-color-palette-manager

./: .coveragerc  .gitattributes  .gitignore  ARCHITECTURE.md  README.md  RNV_Color_Palette_Manager.py  RNV_Color_Palette_Manager.pyproj  RNV_Color_Palette_Manager.spec  TESTING.md  __init__.py  build_linux.sh  build_windows.bat  clean_python_cache.bat  clean_python_cache.sh  coverage_report.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  test_rnv_palette_manager.py
.github/workflows/: tests-linux.yml  tests.yml
core/: __init__.py  accessibility.py  color_extractor.py  color_harmonies.py  color_math.py  color_slot.py  palette_formats.py  palette_metadata.py
snapshots/: canonical.acb  canonical.aco  canonical.afpalette  canonical.ase  canonical.clr  canonical.colors  canonical.css  canonical.gpl  canonical.hex  canonical.hsl  canonical.hsv  canonical.json  canonical.swatches  canonical.txt  canonical.xml  test_import_snapshots.py
tests/: conftest.py  test_color_math_properties.py  test_error_handler.py  test_error_handler_extras.py  test_export_snapshots.py  test_file_utils.py  test_import_snapshots.py  test_perf_color_math.py  test_perf_palette_io.py  test_qt_color_slot.py  test_qt_color_slot_paint.py  test_qt_drag_drop.py  test_qt_infrastructure.py  test_qt_main_window.py  test_qt_search_and_workflows.py  test_session_manager.py
ui/: __init__.py  about_dialog.py  batch_export_dialog.py  color_search.py  colors.py  image_button.py  image_upload_dialog.py  preview_grid.py  settings_dialog.py  slot_group.py  theme_manager.py  zoomable_graphics_view.py
utils/: __init__.py  color_history.py  config.py  dialog_helper.py  error_handler.py  export_history.py  file_utils.py  font_loader.py  logger.py  pixmap_cache.py  recent_palettes.py  session_manager.py  settings_manager.py  undo_manager.py
